// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pipeline with only a synth step 1`] = `
"name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  Build:
    name: Synthesize
    permissions:
      contents: read
    runsOn: ubuntu-20.0
    needs: []
    env: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v2
      - name: Install
        run: yarn
      - name: Build
        run: yarn build
      - name: Upload cdk.out
        uses: actions/upload-artifact@v2.1.1
        with:
          name: cdk.out
          path: cdk.out
"
`;

exports[`single wave/stage/stack 1`] = `
"name: deploy
on:
  push:
    branches:
      - main
  workflow_dispatch: {}
jobs:
  Build:
    name: Synthesize
    permissions:
      contents: read
    runsOn: ubuntu-20.0
    needs: []
    env: {}
    steps:
      - name: Checkout
        uses: actions/checkout@v2
      - name: Install
        run: \\"\\"
      - name: Build
        run: echo \\"nothing to do\\"
      - name: Upload cdk.out
        uses: actions/upload-artifact@v2.1.1
        with:
          name: cdk.out
          path: cdk.out
  FileAsset1:
    name: Publish Assets FileAsset1
    needs:
      - Build
    permissions:
      contents: read
    runsOn: ubuntu-20.0
    steps:
      - name: Download cdk.out
        uses: actions/download-artifact@v2
        with:
          name: cdk.out
          path: cdk.out
      - name: Install
        run: npm install -g cdk-assets
      - name: Publish 110e18dfbcf5cf9d2a3778bf70a12ceccf9eb10d7dd493ef917073e32450a46c
        run: cdk-assets --path \\"cdk.out/assembly-MyStack/MyStack098574E7.assets.json\\"
          --verbose publish
          \\"110e18dfbcf5cf9d2a3778bf70a12ceccf9eb10d7dd493ef917073e32450a46c:current_account-current_region\\"
  Prepare:
    name: Create change set for MyStack098574E7
    permissions:
      contents: none
    needs:
      - Build
      - FileAsset1
    runsOn: ubuntu-20.0
    steps:
      - name: Download cdk.out
        uses: actions/download-artifact@v2
        with:
          name: cdk.out
          path: cdk.out
      - run: aws create-change-set --stac
  Deploy:
    name: Execute change set for MyStack098574E7
    permissions:
      contents: none
    runsOn: ubuntu-20.0
    needs:
      - Prepare
    steps:
      - name: Download cdk.out
        uses: actions/download-artifact@v2
        with:
          name: cdk.out
          path: cdk.out
"
`;
